--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/laythq/Vodafone-Tech-Test/issues"
   },
-  "homepage": "https://github.com/laythq/Vodafone-Tech-Test#readme"
+  "homepage": "https://github.com/laythq/Vodafone-Tech-Test#readme",
+  "dependencies": {
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0"
+  }
 }
